[tool.black]
py36 = true
skip-string-normalization = true

[tool.poetry]
name = "knitj"
version = "0.3.1"
description = "Alternative Jupyter front-end"
readme = "README.md"
authors = ["Jan Hermann <dev@jan.hermann.name>"]
repository = "https://github.com/jhrmnn/knitj"
license = "MPL-2.0"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Framework :: IPython',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Operating System :: POSIX',
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.6"
watchdog = "^0.9.0"
jupyter-client = "^5.2"
ansi2html = "^1.5"
misaka = "^2.1"
aiohttp = "^3.4"
pygments = "^2.2"
Jinja2 = "^2.10"
beautifulsoup4 = "^4.6"
pyyaml = "^3.13"

[tool.poetry.scripts]
knitj = "knitj.cli:main"

[tool.poetry.dev-dependencies]
mypy = "^0.641.0"
lxml = "^4.2"
flake8 = "^3.6"
flake8-bugbear = "^18.8"
flake8-comprehensions = "^1.4"
flake8-quotes = "^1.0"
black = "^18.3-alpha.0"
ipykernel = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
