[metadata]
name = knitj
version = 0.2.1
description = Alternative Jupyter front-end
long_description = file: README.md
long_description_content_type = text/markdown
author = Jan Hermann
author_email = dev@janhermann.cz
url = https://github.com/azag0/knitj
license = MPL 2.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
packages = find:
install_requires =
    watchdog
    jupyter-client
    ansi2html
    misaka
    aiohttp
    pygments
    Jinja2
    beautifulsoup4
    pyyaml
python_requires = >=3.6

[options.package_data]
knitj =
    client/static/*
    client/templates/*

[options.entry_points]
console_scripts =
    knitj = knitj.cli:main

[flake8]
max-complexity = 12
max-line-length = 80
ignore = E501,W503,E741,E203
select = C,E,F,W,B,B9,Q0

[mypy]
python_version = 3.6
mypy_path = stubs
warn_incomplete_stub = yes
warn_redundant_casts = yes
warn_unused_ignores = yes

[mypy-knitj.*]
follow_imports = normal
follow_imports_for_stubs = yes
disallow_any_unimported = yes
disallow_untyped_calls = yes
disallow_untyped_defs = yes
check_untyped_defs = yes
warn_no_return = yes
warn_return_any = yes
no_implicit_optional = yes
